k8s/rss-bridge/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rss-bridge
spec:
  selector:
    app: rss-bridge
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
